change header and add link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title></title>
 </head>
 <body>
-  <h2>mango</h2>
+  <h2><a href="www.askdhbaskjdb/com">mango</a></h2>
   <h3>grapes</h3>
+  <h1>Durian</h1>
+  <h2>mango</h2>
 </body>
 </html>
